--- a/.github/workflows/go-condi.yml
+++ b/.github/workflows/go-condi.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   deploy:
+    needs: pr_check
     runs-on: ubuntu-latest
     steps:
 
@@ -26,3 +27,19 @@ jobs:
     - name: Deploy to staging
       if: github.event.pull_request.base.ref != 'master'
       run: echo "Deploying to staging"
+      
+  pr_check:
+    if: "!contains(github.event.pull_request.title, '[skip-checks]')"
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21'
+    - name: Lint
+      run: |
+        go install golang.org/x/lint/golint@latest
+        golint hi.go
+    - name: Test
+      run: go test -v hi.go
