--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,7 +4,11 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, ubuntu-22.04, ubuntu-24.04]
+        go-version: ['1.19', '1.20', '1.21']
     steps:
     - uses: actions/checkout@v3
     - name: Set up Go
